--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="shortcut icon" href="https://imgur.com/5bBtwit" type="image/x-icon">
+    <link rel="shortcut icon" href="https://data.whicdn.com/images/340073303/original.png" type="image/x-icon">
     <title>THAI HOA | HOME</title>
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <meta name="author" content="THAI HOA">
     <meta property="og:title" content="THAI HOA | HOME">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://daikhang.tk/">
-    <meta property="og:image" content="https://imgur.com/5bBtwit">
+    <meta property="og:url" content="https://thaihoa.ml/">
+    <meta property="og:image" content="https://data.whicdn.com/images/340073303/original.png">
     <meta property="og:image:width" content="120">
     <meta property="og:image:height" content="120">
     <meta property="og:site_name" content="THAIHOA | HOME">
