--- a/Test/index.html
+++ b/Test/index.html
@@ -363,7 +363,7 @@ html, body {
 		<h1 t="404">404</h1>
 		<div class="bottom">
 			<p>Không tồn tại hoặc đã bị gỡ bỏ</p>
-			<a href="#">Về trang chủ đi thằng ngu</a>
+			<a href="https://thaihoa.ml/">Về trang chủ đi thằng ngu</a>
 			<br>
 		</div>
 	</div>
