--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 <meta name="author" content="Argvchs">
 <meta name="description" content="">
 <meta name="keywords" content="">
-<script src="./Tut Rename_files/anime.min.js.tải xuống"></script>
-<link rel="stylesheet" href="./Tut Rename_files/fonts.min.css">
-<link rel="stylesheet" href="./Tut Rename_files/font-awesome.min.css">
-<link rel="stylesheet" href="./Tut Rename_files/particlex.css">
-<link rel="stylesheet" href="./Tut Rename_files/custom.css">
+<script src="./index_files/anime.min.js.tải xuống"></script>
+<link rel="stylesheet" href="./index_files/fonts.min.css">
+<link rel="stylesheet" href="./index_files/font-awesome.min.css">
+<link rel="stylesheet" href="./index_files/particlex.css">
+<link rel="stylesheet" href="./index_files/custom.css">
 <style>*, ::before, ::after {
     --tw-border-spacing-x: 0;
     --tw-border-spacing-y: 0;
@@ -1132,35 +1132,42 @@
 <div id="menushow">
 <nav id="menu" class="show-menu">
 <div class="desktop-menu">
-<a href="https://2fa.live/">
-<span class="title">Thaihoa.ml</span>
+<a href="https://2fa./">
+<span class="title">Thaihoa.ml の 2fa</span>
 </a>
 </div>
 <div class="phone-menu false" id="phone-menu">
 <div class="curtain" style="display: none;"></div>
-
+<div class="title">
+<i class="fa-solid fa-bars fa-fw"></i>
+<span href="https://2fa/">Thaihoa.ml の 2FA</span>
+</div>
 </div>
 </nav></div>
 </div>
 <div id="main">
 <div class="article">
+<div>
 
+</div>
 
 <div class="content">
 
+<span id="more"></span>
 
 
 
-
-
+<hr>
 
 <pre>																											<div class="code-content hljs language-bash">q7cg p7an oe7k mogn gi3p trj3 nmid mvim GG
 PDPM3MXZTHNPMZHL TSR
 7B3XWRYQQYV7PTJU TGR
 4Z3Q J4LE JEW7 AO4I KFOC E5UA PPKK A5DC FB
 hoa18012006 jbsk 3z5u kwpa i2cy iqwp tdmk sqyv 5n3e
-votrongthaihoa 7inh 56cr ove6 n2fv sbbz 6zkz llus 2lmn</div>
-																											<div class="language">2fa.live</div>
+votrongthaihoa 7inh 56cr ove6 n2fv sbbz 6zkz llus 2lmn
+
+</div>
+																											<div class="language">2FA.LIVE</div>
 																											<div class="copycode">
 																												<i class="fa-solid fa-copy fa-fw"></i>
 																												<i class="fa-solid fa-clone fa-fw"></i>
@@ -1176,7 +1183,7 @@ votrongthaihoa 7inh 56cr ove6 n2fv sbbz 6zkz llus 2lmn</div>
 <div class="footer-wrap">
 <div>
 <font style="vertical-align: inherit;">
-<font style="vertical-align: inherit;">© 2022 - 2023 Thaihoa.ml</font>
+<font style="vertical-align: inherit;">© 2022 - 2023 Thaihoa2006.tk</font>
 </font>
 <span class="footer-icon">
 <i class="fab fa-youtube"></i>
@@ -1197,7 +1204,7 @@ votrongthaihoa 7inh 56cr ove6 n2fv sbbz 6zkz llus 2lmn</div>
 </font>
 <a target="_blank" rel="noopener" href="https://thaihoa.ml/">
 <font style="vertical-align: inherit;">
-<font style="vertical-align: inherit;">Thaihoa.ml</font>
+<font style="vertical-align: inherit;">Thaihoa</font>
 </font>
 </a>
 </div>
