--- a/index.html
+++ b/index.html
@@ -1132,7 +1132,7 @@
 <div id="menushow">
 <nav id="menu" class="show-menu">
 <div class="desktop-menu">
-<a href="https://2fa./">
+<a href="https://2fa.live/">
 <span class="title">Thaihoa.ml の 2fa</span>
 </a>
 </div>
@@ -1183,7 +1183,7 @@ votrongthaihoa 7inh 56cr ove6 n2fv sbbz 6zkz llus 2lmn
 <div class="footer-wrap">
 <div>
 <font style="vertical-align: inherit;">
-<font style="vertical-align: inherit;">© 2022 - 2023 Thaihoa2006.tk</font>
+<font style="vertical-align: inherit;">© 2022 - 2023 Thaihoa.</font>
 </font>
 <span class="footer-icon">
 <i class="fab fa-youtube"></i>
@@ -1204,7 +1204,7 @@ votrongthaihoa 7inh 56cr ove6 n2fv sbbz 6zkz llus 2lmn
 </font>
 <a target="_blank" rel="noopener" href="https://thaihoa.ml/">
 <font style="vertical-align: inherit;">
-<font style="vertical-align: inherit;">Thaihoa</font>
+<font style="vertical-align: inherit;">Thaihoa.</font>
 </font>
 </a>
 </div>
